--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,13 +36,14 @@ a:visited {
   color: unset;
 }
 
-body {
+body,
+html {
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: fit-content;
+  min-height: 100vh;
   width: 100vw;
   background-color: #242424;
 }
@@ -50,7 +51,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  /* min-height: 100vh; */
+  min-height: 100vh;
 }
 
 h1 {
