--- a/client/src/routes/LoginPage.module.css
+++ b/client/src/routes/LoginPage.module.css
@@ -36,4 +36,5 @@ select {
   padding: 0.6rem 0.8rem;
   background-color: #213547;
   border: 2px solid #f9f9f9;
+  color: #f9f9f9;
 }
